# hackathon-huggingface

./: README.md  activities_agent.py  activities_info.txt  main.py  output_airbnb.txt  output_flight.txt  pyproject.toml  result.txt
.github/workflows/: pipeline.yml
data/browser_use_test/: airbnb_listings.html  airbnb_listings.url  url_contains.url
docs/: agent_test copy.ipynb  airbnb_research_agent.py  browser_use_test.py  manager_agent.ipynb  my_notebook.ipynb  selenium_test.py  sylvain_notebook.ipynb  test.py  travel_agent.py
src/loulou/: activities_agent.py  browser_use_tools.py  classes.py  common.py  hello.py  price_research_agent.py  smolagents_tool.py
tests/: test_simple.py
