[project]
name = "loulou"
version = "0.1.0"
description = "Hackathon Hugging Face"
readme = "README.md"
authors = [
    { name = "Charles Azam", email = "azamcharles0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.68.1",
    "smolagents[bedrock,gradio,telemetry,toolkit]>=1.16.0",
    "duckduckgo-search>=8.0.2",
    "selenium>=4.32.0",
    "helium>=5.1.1",
    "pillow>=11.2.1",
    "ipykernel>=6.29.5",
    "markdownify>=1.1.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pydantic>=2.11.4",
    "pytest>=8.4.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "scipy>=1.15.3",
    "numpy>=2.3.0",
    "streamlit>=1.45.1",
    "huggingface-hub[cli]>=0.33.0",
    "browser-use[memory]>=0.2.7",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.24",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
